Added pagination/sort/search for articles
