# server/src/docs/swagger.json
@@ -11,11 +11,11 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8000/"
+      "url": "http://localhost:8000/api/v1"
     }
   ],
   "paths": {
-    "/${BASE_URL}/${VERSION}/articles/": {
+    "/articles/": {
       "get": {
         "tags": [
           "Article"
@@ -23,22 +23,6 @@
         "summary": "Get articles",
         "description": "Get articles from DB",
         "parameters": [
-          {
-            "name": "BASE_URL",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "VERSION",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "page",
             "in": "query",
@@ -53,6 +37,26 @@
             "description": "Count of elements for page",
             "schema": {
               "type": "number"
+            }
+          },
+          {
+            "name": "filter",
+            "in": "query",
+            "description": "Filter by title",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "description": "Sort ascending/descending by pubDate",
+            "enum": [
+              "1",
+              "-1"
+            ],
+            "schema": {
+              "type": "string"
             }
           }
         ],
@@ -70,6 +74,10 @@
                     "msg": {
                       "type": "string",
                       "example": "All Articles have been fetched!"
+                    },
+                    "totalPages": {
+                      "type": "number",
+                      "example": 0
                     }
                   },
                   "xml": {
@@ -87,6 +95,10 @@
                     "msg": {
                       "type": "string",
                       "example": "All Articles have been fetched!"
+                    },
+                    "totalPages": {
+                      "type": "number",
+                      "example": 0
                     }
                   },
                   "xml": {
@@ -105,22 +117,6 @@
         "summary": "Create a new article",
         "description": "Create a new article in DB",
         "parameters": [
-          {
-            "name": "BASE_URL",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "VERSION",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "authorization",
             "in": "header",
@@ -186,7 +182,7 @@
         }
       }
     },
-    "/${BASE_URL}/${VERSION}/articles/{id}": {
+    "/articles/{id}": {
       "get": {
         "tags": [
           "Article"
@@ -194,22 +190,6 @@
         "summary": "Get single articles",
         "description": "Get single article from DB",
         "parameters": [
-          {
-            "name": "BASE_URL",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "VERSION",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "id",
             "in": "path",
@@ -301,22 +281,6 @@
         "summary": "Delete an articles",
         "description": "Delete an article from DB",
         "parameters": [
-          {
-            "name": "BASE_URL",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "VERSION",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "id",
             "in": "path",
@@ -420,22 +384,6 @@
         "summary": "Update an article",
         "description": "Update an article in DB",
         "parameters": [
-          {
-            "name": "BASE_URL",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "VERSION",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
           {
             "name": "id",
             "in": "path",
@@ -542,31 +490,13 @@
         }
       }
     },
-    "/${BASE_URL}/${VERSION}/auth/register": {
+    "/auth/register": {
       "post": {
         "tags": [
           "Authorization"
         ],
         "summary": "Register user for access to admin panel.",
         "description": "Register user with username and password.",
-        "parameters": [
-          {
-            "name": "BASE_URL",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "VERSION",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Success register",
@@ -705,31 +635,13 @@
         }
       }
     },
-    "/${BASE_URL}/${VERSION}/auth/login": {
+    "/auth/login": {
       "post": {
         "tags": [
           "Authorization"
         ],
         "summary": "Authenticate user.",
         "description": "Login user with username and password.",
-        "parameters": [
-          {
-            "name": "BASE_URL",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "VERSION",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "200": {
             "description": "Success register",
