# server/src/server.ts
@@ -1,9 +1,9 @@
 import express, { Express } from 'express';
 import dotenv from 'dotenv';
 import connectDB from './configs/db.config';
-import articleRouter from './routes/article.routes';
-import authRouter from './routes/auth.routes';
+
 import parse from './helpers/parser';
+import appRoutes from './routes/index.routes';
 
 dotenv.config();
 
@@ -12,14 +12,14 @@ const { MONGO_USERNAME, MONGO_PASSWORD, RSS_URL, BASE_URL, VERSION } =
 
 const MONGO_URI = `mongodb+srv://${MONGO_USERNAME}:${MONGO_PASSWORD}@cluster0.31fc5ax.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0`;
 const PORT = process.env.PORT || 8000;
+const SERVER_URL = `/${BASE_URL}/${VERSION}`;
 
 const app: Express = express();
 
 app.use(express.json());
-app.use(express.urlencoded({ extended: false }));
+app.use(express.urlencoded({ extended: true }));
 
-app.use(`/${BASE_URL}/${VERSION}/articles`, articleRouter);
-app.use(`/${BASE_URL}/${VERSION}/auth`, authRouter);
+app.use(`${SERVER_URL}`, appRoutes);
 
 const startServer = async () => {
   try {
